argocd-helmchart/templates/ingress.yaml
# This is Ingress, that will route traffic from the Domain to Ingress and to Service
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: nginx
# spec:
#   controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  # IngressClassName: nginx
  rules:
  - host: Argocd.tracon.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-app-service
            port:
              number: 5000
